--- a/view.html
+++ b/view.html
@@ -8,8 +8,8 @@
       :root {
         --card-max: 420px;
         --btn-radius: 10px;
-        --btn-bg: #0366d6;
-        --btn-bg-hover: #024ea2;
+        --btn-bg: #0170ee;
+        --btn-bg-hover: #3eba18;
         --btn-color: #fff;
         --shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
       }
@@ -36,10 +36,10 @@
 
       /* 로고 */
       .logo {
-        margin-bottom: 16px;
+        margin-bottom: 8px;
       }
       .logo img {
-        max-height: 80px;
+        max-height: 100px;
       }
 
       /* 버튼들 (세로 나란히, 전체 폭 차지) */
@@ -55,7 +55,7 @@
         align-items: center;
         justify-content: center;
         gap: 8px;
-        padding: 12px 14px;
+        padding: 6px 10px;
         text-decoration: none;
         font-weight: 700;
         color: var(--btn-color);
@@ -63,6 +63,7 @@
         border-radius: var(--btn-radius);
         box-shadow: var(--shadow);
         line-height: 1;
+        font-size: 0.97rem;
         width: 100%; /* 사진과 같은 폭 */
       }
       .btn-col a:hover {
