진짜 링크로 변경

--- a/view.html
+++ b/view.html
@@ -36,10 +36,10 @@
 
       /* 로고 */
       .logo {
-        margin-bottom: 1px;
+        margin-bottom: 0px;
       }
       .logo img {
-        max-height: 110px;
+        max-height: 120px;
       }
 
       /* 버튼들 (세로 나란히, 전체 폭 차지) */
@@ -123,7 +123,7 @@
 
         <a
           id="btn-join"
-          href="https://instagram.com/ajou_doit"
+          href="https://forms.gle/bPh3WG9ZPPoojyWn9"
           target="_blank"
           rel="noopener noreferrer"
         >
