문구 테스트

--- a/view.html
+++ b/view.html
@@ -147,7 +147,7 @@
       <p class="small">
         DO-IT! 부스에 방문해 주셔서 감사합니다.<br />
         영수증 사진과 함께 @ajou_doit을 태그해서<br />
-        스토리 공유 시 추첨으로 상품권이 제공됩니다.
+        스토리 공유 시 추첨으로 상품권이 제공됩니다.121
       </p>
 
       <!-- 사진 영역 -->
