문구 최종수정

--- a/view.html
+++ b/view.html
@@ -144,7 +144,11 @@
         </a>
       </div>
 
-      <p class="small">...</p>
+      <p class="small">
+        DO-IT! 부스에 방문해 주셔서 감사합니다.<br />
+        영수증 사진과 함께 @ajou_doit을 태그해서<br />
+        스토리 공유 부탁드립니다!
+      </p>
 
       <!-- 사진 영역 -->
       <div class="photos" id="photos"></div>
